--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~52.0.37",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "^0.13.2",
     "expo-camera": "~16.0.17",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
@@ -32,6 +33,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^11.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
