--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-build-properties": "^0.13.2",
     "expo-camera": "~16.0.17",
     "expo-constants": "~17.0.7",
+    "expo-dev-client": "~5.0.13",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
@@ -36,6 +37,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
+    "expo-updates": "~0.27.3",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.3.1",
     "react": "18.3.1",
